--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "npm test"
+    "start": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/Babbages-Dreamers/SDC_Products#readme",
   "dependencies": {
-    "sequelize": "^6.32.1"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
+    "pg": "^8.11.1",
+    "pg-promise": "^11.5.0"
   }
 }
