--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "nodemon src/server/server.js",
+    "start": "nodemon src/server/startServer.js",
     "test": "jest --verbose --detectOpenHandles"
   },
   "repository": {
