--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "nodemon src/server/startServer.js",
-    "test": "jest --verbose --detectOpenHandles"
+    "test": "jest --verbose --detectOpenHandles",
+    "stress-test": "artillery run /tests/products-stress.yml"
   },
   "repository": {
     "type": "git",
